[gd_scene load_steps=5 format=2]

[ext_resource path="res://Effects/FireballBlue.png" type="Texture" id=1]
[ext_resource path="res://Effects/BlueFireball.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 7.0

[node name="BlueFireball" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="FireballEffect" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0.5 )
rotation = 1.5708
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_BlueFireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
